further css tweak to stop flickering on iOS

--- a/styles/h5p.css
+++ b/styles/h5p.css
@@ -14,6 +14,16 @@
 
 html.h5p-iframe, html.h5p-iframe > body {
   font-family: Sans-Serif; /* Use the browser's default sans-serif font. (Since Heletica doesn't look nice on Windows, and Arial on OS X.) */
+  /*
+  width: 100%;
+  height: 100%;
+  */
+  width: 1px;
+  min-width: 100%;
+  margin: 0;
+  padding: 0;
+}
+html.h5p-iframe, html.h5p-iframe > body.h5p-fullscreen {
   width: 100%;
   height: 100%;
   margin: 0;
